--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="hover.css" rel="stylesheet">
     <link rel="stylesheet" href="animate.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
@@ -13,14 +14,14 @@
     <div class="container-fluid">
         <div class="row px-5 d-flex m-0" id="top">
             <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-between justify-content-lg-start">
-                <a href="index.html" class="sygnet">
+                <a href="index.html" class="sygnet" data-aos="fade-right" data-aos-delay="150">
                     <img src="img/sygnet.svg" class="img-fluid"/>
                 </a>
                 <div class="menuIcon d-lg-none" onclick="openNav()">
                     <img src="img/menu.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
+            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0 " data-aos="fade-down">
                 <nav id="menu" class="d-flex justify-content-end">      
                     <ul class="d-flex align-items-center">
                         <li><a href="about.html">O Nas</a></li>
@@ -86,11 +87,11 @@
                     <div class="container d-flex flex-column justify-content-between h-100 p-0">
                         <div class="row mt-lg-5 pt-lg-5 m-0">
                             <div class="col-12 col-lg-4 d-flex flex-column p-0">
-                                <h1 class="pageName mx-5 mx-lg-0">
+                                <h1 class="pageName mx-5 mx-lg-0" data-aos="fade-right" data-aos-delay="350">
                                     O nas
                                 </h1>
-                                <img src="img/onas.jpg" class="img-fluid d-lg-none" alt="">
-                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0">
+                                <img src="img/onas.jpg" class="img-fluid d-lg-none" alt="" data-aos="fade-right">
+                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0" data-aos="fade-right" data-aos-delay="350">
                                     Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami z różnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne.<br><br> Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                
                                     <a name="" id="" class="d-none  mt-5 hvr-icon-wobble-horizontal d-lg-flex buttonRounded bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
@@ -118,14 +119,14 @@
             <div class="col-12 p-0">
                 <div class="stopka">
                     <div class="container d-lg-flex align-items-center justify-content-between p-0 d-none">
-                        <span>
+                        <span data-aos="fade-right">
                             <span class="footerCompany">Team Value Partners spółka z orgraniczoną odpowiedzialnością</span><br>
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex" id="stopkaMail">
-                            <img src="img/stopka1.png" class="img-fluid" alt="">
-                            <div class="primaryBg d-flex justify-content-center align-items-center pt-5">
+                        <div class="h-100 d-flex" id="stopkaMail" data-aos="fade-left">
+                            <img src="img/stopka1.png" class="img-fluid" alt="" >
+                            <div class="primaryBg d-flex justify-content-center align-items-center pt-5" >
                                 <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
                             </div>
                             <img src="img/stopka2.png" class="img-fluid" alt="">
@@ -143,11 +144,14 @@
 
 
     <!-- Optional JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <script src="script/script.js"></script>
+    
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="script/acbc18888d.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
