--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
                 </div>
             </div>
         </div>
-        <div class="container my-5 my-lg-0 py-5 py-lg-0 px-5 px-lg-0" id="experience">
+
+
+        <!-- <div class="container my-5 my-lg-0 py-5 py-lg-0 px-5 px-lg-0">
             <div class="row expierienceSection mx-0">
                 <div class="col-12 col-lg-6 d-flex justify-content-center flex-column">
                         <div class="row" data-aos="fade-right">
@@ -160,7 +162,38 @@
             <div class="position-absolute dotsBg">
                 <img src="img/dots.png" class="img-fluid" alt="">
             </div>
+        </div> -->
+
+        <div class="row my-5 my-lg-0 py-5 py-lg-0 px-5 m-0" id="experience">
+            <div class="container d-flex expierienceSection">
+                <div class="col-12 col-lg-6 d-flex justify-content-center flex-column p-0">
+                    <div class="row mx-0" data-aos="fade-right">
+                        <span class="expierienceTxt"><span class="bluePrimaryTxt">Wykorzystujemy zgromadzone przez kilkanaście lat doświadczenia</span><br>
+                            w bezpośredniej współpracy z właścicielami oraz zarządami spółek<br>
+                            w budowaniu i maksymalizowaniu wartości przedsiębiorstw.
+                        </span>
+                    </div>
+                    <div class="row mt-5 mx-0" data-aos="fade-up" >
+                        <a name=""  class="buttonRounded hvr-icon-wobble-horizontal  d-flex justify-content-lg-center justify-content-between" href="about.html" role="button">
+                            <div class="arrowRight mr-lg-4">
+                                <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
+                            </div>
+                            <span class="btnTxt flex-grow-1 align-self-center text-center">Poznaj Nas</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6 d-none d-lg-flex justify-content-end align-items-center p-0" data-aos="fade-left">
+                    <div class="expIcon">
+                        <img src="img/rozbudowa.png" class="img-fluid" alt="">
+                    </div>
+                </div> 
+            </div>
+            
         </div>
+        <div class="position-absolute dotsBg">
+            <img src="img/dots.png" class="img-fluid" alt="">
+        </div>
+
         <div class="row px-lg-5 offerSection m-0 " data-aos="fade-right">
             <div class="col-12 p-0 ">
                 <div class="bgLeftOffer d-none d-lg-block" ></div>
@@ -248,6 +281,7 @@
             </div>
             <!-- -- -->
         </div>
+        
         <div class="row px-lg-5 m-0">
             <div class="col-12 p-0">
                 <div class="stopka">
