--- a/contact.html
+++ b/contact.html
@@ -12,17 +12,16 @@
   </head>
   <body>
     <div class="container-fluid">
-        <div class="container-fluid">
             <div class="row px-5 d-flex m-0" id="top">
                 <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-between justify-content-lg-start">
-                    <a href="index.html" class="sygnet" data-aos="fade-right" data-aos-delay="150">
+                    <a href="index.html" class="sygnet">
                         <img src="img/sygnet.svg" class="img-fluid"/>
                     </a>
                     <div class="menuIcon d-lg-none" onclick="openNav()">
                         <img src="img/menu.png" class="img-fluid" alt="">
                     </div>
                 </div>
-                <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0 " data-aos="fade-down">
+                <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
                     <nav id="menu" class="d-flex justify-content-end">      
                         <ul class="d-flex align-items-center">
                             <li><a href="about.html">O Nas</a></li>
@@ -82,7 +81,7 @@
                     <div class="container d-flex flex-column justify-content-between h-100 p-0">
                         <div class="row mt-lg-5 pt-lg-5 m-0">
                             <div class="col-12 d-flex flex-column p-0">
-                                <h1 class="pageName mx-5 mx-lg-0 bluePrimaryTxt" data-aos="fade-right" data-aos-delay="350">
+                                <h1 class="pageName mx-5 mx-lg-0 bluePrimaryTxt" data-aos="fade-up">
                                     Kontakt
                                 </h1>
                             </div>
@@ -97,7 +96,7 @@
                 <img src="img/dots.png" class="img-fluid" alt=""> 
             </div>
             <div class="row mt-5 contactPageBox mb-5 mb-lg-0 mx-0">
-                <div class="col-12 col-lg-6 p-0" data-aos="fade-right" data-aos-delay="350">
+                <div class="col-12 col-lg-6 p-0" data-aos="fade-up" data-aos-delay="100">
                     <div class="row d-flex flex-column mx-0">
                         <span class="text-black"><b>Team Value Partners spółka z ograniczoną odpowiedzialnością </b></span><br>
                         <span class="secondaryTxt"> Krasińskiego 29/9, <br>
@@ -111,7 +110,7 @@
                         <a href="" class="mailContact">biuro@teamvalue.pl</a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 p-0" data-aos="fade-right" data-aos-delay="350">
+                <div class="col-12 col-lg-6 p-0" data-aos="fade-up" data-aos-delay="200">
                     <div class="formBox pt-5 p-lg-5">
                         <form>
                             <input class="form-control form-control-sm mb-3" type="text" placeholder="Imię i nazwisko">
@@ -134,12 +133,12 @@
             <div class="col-12 p-0">
                 <div class="stopka">
                     <div class="container d-lg-flex align-items-center justify-content-between p-0 d-none">
-                        <span data-aos="fade-right">
+                        <span>
                             <span class="footerCompany">Team Value Partners spółka z orgraniczoną odpowiedzialnością</span><br>
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex" id="stopkaMail" data-aos="fade-left">
+                        <div class="h-100 d-flex" id="stopkaMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="" >
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5" >
                                 <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
