--- a/team.html
+++ b/team.html
@@ -14,14 +14,14 @@
     <div class="container-fluid">
         <div class="row px-5 d-flex m-0" id="top">
             <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-between justify-content-lg-start">
-                <a href="index.html" class="sygnet" data-aos="fade-right" data-aos-delay="150">
+                <a href="index.html" class="sygnet">
                     <img src="img/sygnet.svg" class="img-fluid"/>
                 </a>
                 <div class="menuIcon d-lg-none" onclick="openNav()">
                     <img src="img/menu.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0 " data-aos="fade-down">
+            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
                 <nav id="menu" class="d-flex justify-content-end">      
                     <ul class="d-flex align-items-center">
                         <li><a href="about.html">O Nas</a></li>
@@ -81,10 +81,10 @@
                     <div class="container d-flex flex-column justify-content-between h-100 p-0">
                         <div class="row mt-lg-5 pt-lg-5 m-0">
                             <div class="col-12 d-flex flex-column p-0">
-                                <h1 class="pageName mx-5 mx-lg-0 bluePrimaryTxt" data-aos="fade-right" data-aos-delay="350">
+                                <h1 class="pageName mx-5 mx-lg-0 bluePrimaryTxt" data-aos="fade-up">
                                     Zespół
                                 </h1>
-                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0 grayTxt border-none" data-aos="fade-right" data-aos-delay="350">
+                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0 grayTxt border-none" data-aos="fade-up" data-aos-delay="100">
                                     Członkowie zespołu łączą wieloletnie praktyczne doświadczenie w operacyjnym zarządzaniu przedsiębiorstwami <br>
                                     w roli członka zarządu z kompetencjami w zakresie realizacji inwestycji kapitałowych, transakcji fuzji, <br>
                                     przejęć i sprzedaży spółek oraz konsultingu nakierowanego na wzrost wartości spółek.   
@@ -100,20 +100,20 @@
             <div class="d-none d-lg-block position-absolute teamWatermark">
                 <img src="img/znak_wodny.png" class="img-fluid" alt=""> 
             </div>
-            <div class="row mt-5 teamPersonBox mb-5 mb-lg-0 mx-0" data-aos="zoom-out">
+            <div class="row mt-5 teamPersonBox mb-5 mb-lg-0 mx-0">
                 <div class="col-12 col-lg-8 d-flex justify-content-center flex-column p-0" >
                     <div class="d-flex justify-content-center flex-column mb-5" >
-                        <span class="teamName bluePrimaryTxt">Jarosław Plisz</span>
-                        <span class="teamRole bluePrimaryTxt">Partner Zarządzający</span>
+                        <span class="teamName bluePrimaryTxt" data-aos="fade-up" data-aos-delay="100">Jarosław Plisz</span>
+                        <span class="teamRole bluePrimaryTxt" data-aos="fade-up" data-aos-delay="150">Partner Zarządzający</span>
                     </div>
                     <div class="d-lg-none teamPersonPhoto w-100 h-100 mb-5">
                         <img src="img/plisz.jpg" class="img-fluid" alt="">
                     </div>
-                    <span class="pr-5">
+                    <span class="pr-5" data-aos="fade-up" data-aos-delay="150">
                         Posiada ponad 25 letnie doświadczenie w operacyjnym zarządzaniu dużymi przedsiębiorstwami, w tym spółkami giełdowymi, w szczególności w obszarach finansów i M&A . Zarządzając przedsiębiorstwami koncentrował się w szczególności na optymalizacja procesów wewnętrznych i poprawie efektywności. Zrealizował szereg projektów M&A, zarówno po stronie kupującego, jak i sprzedającego, zarządzając wszystkimi etapami procesu od selekcji potencjalnych celów akwizycyjnych/potencjalnych inwestorów, ewaluacji, negocjacji warunków inwestycji, zamknięcia inwestycji do zarządzania procesami integracji po transakcji.
                     </span>
                     <div class="row mx-0">
-                        <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                        <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button" data-aos="fade-up" data-aos-delay="150">
                             <div class="arrowRight mr-lg-4">
                                 <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                             </div>
@@ -121,25 +121,25 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 d-none d-lg-flex justify-content-end p-0">
-                    <div class="teamPersonPhoto">
+                <div class="col-12 col-lg-4 d-none d-lg-flex justify-content-end p-0" data-aos="fade-up" data-aos-delay="150">
+                    <div class="teamPersonPhoto" >
                         <img src="img/plisz.jpg" class="img-fluid" alt="">
                     </div>
                 </div>
             </div>
-            <div class="row mb-5 teamPersonBox mx-0" data-aos="zoom-out">
+            <div class="row mb-5 teamPersonBox mx-0">
                 <div class="col-12 col-lg-8 d-flex justify-content-center flex-column p-0">
                     <div class="d-flex justify-content-center flex-column mb-5">
-                        <span class="teamName bluePrimaryTxt">Wojciech Olszenka</span>
-                        <span class="teamRole bluePrimaryTxt">Partner Zarządzający</span>
+                        <span class="teamName bluePrimaryTxt" data-aos="fade-up">Wojciech Olszenka</span>
+                        <span class="teamRole bluePrimaryTxt" data-aos="fade-up" data-aos-delay="50">Partner Zarządzający</span>
                     </div>
-                    <div class="d-lg-none teamPersonPhoto w-100 h-100 mb-5">
+                    <div class="d-lg-none teamPersonPhoto w-100 h-100 mb-5" data-aos="fade-up" data-aos-delay="50">
                         <img src="img/olszenka.jpg" class="img-fluid" alt="">
                     </div>
-                    <span class="pr-5">
+                    <span class="pr-5" data-aos="fade-up" data-aos-delay="50">
                         Posiada kilkunastoletnie doświadczenie w obszarze doradztwa strategicznego i biznesowego oraz procesów M&A, w tym realizacji procesów akwizycyjnych. Specjalizuje się w analizie biznesowej oraz identyfikacji generatorów wartości spółek, w szczególności w zakresie zasobów kapitału intelektualnego. Jako Manager Inwestycyjny funduszu Giza Polish Ventures zarządzał procesem identyfikacji i ewaluacji spółek innowacyjnych oraz procesami wyjść z inwestycji w spółki portfelowe.                    </span>
                     <div class="row mx-0">
-                        <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button">
+                        <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button" data-aos="fade-up" data-aos-delay="50">
                             <div class="arrowRight mr-lg-4">
                                 <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                             </div>
@@ -147,7 +147,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 d-none d-lg-flex justify-content-end p-0">
+                <div class="col-12 col-lg-4 d-none d-lg-flex justify-content-end p-0" data-aos="fade-up" data-aos-delay="50">
                     <div class="teamPersonPhoto">
                         <img src="img/olszenka.jpg" class="img-fluid" alt="">
                     </div>
@@ -158,12 +158,12 @@
             <div class="col-12 p-0">
                 <div class="stopka">
                     <div class="container d-lg-flex align-items-center justify-content-between p-0 d-none">
-                        <span data-aos="fade-right">
+                        <span>
                             <span class="footerCompany">Team Value Partners spółka z orgraniczoną odpowiedzialnością</span><br>
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex" id="stopkaMail" data-aos="fade-left">
+                        <div class="h-100 d-flex" id="stopkaMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="" >
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5" >
                                 <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
