--- a/experience.html
+++ b/experience.html
@@ -14,14 +14,14 @@
     <div class="container-fluid">
         <div class="row px-5 d-flex m-0" id="top">
             <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-between justify-content-lg-start">
-                <a href="index.html" class="sygnet" data-aos="fade-right" data-aos-delay="150">
+                <a href="index.html" class="sygnet">
                     <img src="img/sygnet.svg" class="img-fluid"/>
                 </a>
                 <div class="menuIcon d-lg-none" onclick="openNav()">
                     <img src="img/menu.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0 " data-aos="fade-down">
+            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
                 <nav id="menu" class="d-flex justify-content-end">      
                     <ul class="d-flex align-items-center">
                         <li><a href="about.html">O Nas</a></li>
@@ -86,20 +86,24 @@
                     <div class="container d-flex flex-column justify-content-between h-100 p-0">
                         <div class="row mt-lg-5 pt-lg-5 m-0">
                             <div class="col-12 col-lg-4 d-flex flex-column p-0">
-                                <h1 class="pageName mx-5 mx-lg-0" data-aos="fade-right" data-aos-delay="350">
+                                <h1 class="pageName mx-5 mx-lg-0" data-aos="fade-up">
                                     Doświadczenie
                                 </h1>
-                                <img src="img/doswiadczenie.jpg" class="img-fluid d-lg-none" alt="" data-aos="fade-right">
-                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0" data-aos="fade-right" data-aos-delay="350">
-                                    Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami zróżnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne. 
-                                    <br><br>
-                                    Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                    
-                                    <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded hvr-icon-wobble-horizontal bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
-                                        <div class="arrowRight mr-lg-4">
-                                            <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
-                                        </div>
-                                        <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
-                                    </a>
+                                <img src="img/doswiadczenie.jpg" class="img-fluid d-lg-none" alt="" data-aos="fade-up">
+                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0">
+                                    <div data-aos="fade-up" data-aos-delay="100">
+                                        Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami zróżnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne. 
+                                        <br><br>
+                                        Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.                                    
+                                    </div>
+                                    <div class="row m-0" data-aos="fade-up" data-aos-delay="200">
+                                        <a name="" id="" class="d-none  mt-5 d-lg-flex buttonRounded hvr-icon-wobble-horizontal bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
+                                            <div class="arrowRight mr-lg-4">
+                                                <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
+                                            </div>
+                                            <span class="btnTxt bluePrimaryTxt flex-grow-1 align-self-center text-center">Poznaj zespół</span>
+                                        </a>
+                                    </div>
                                     <a name="" id="" class="d-lg-none mt-5 buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="team.html" role="button">
                                         <div class="arrowRight mr-lg-4">
                                             <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
@@ -119,24 +123,24 @@
         <div class="container my-0 pb-5 pb-lg-0 px-5 px-lg-0">
             <div class="row mt-5 mx-0">
                 <div class="col-12 p-0">
-                    <h1 class="categoryOffer bluePrimaryTxt" data-aos="fade-right" data-aos-delay="350">
+                    <h1 class="categoryOffer bluePrimaryTxt" data-aos="fade-up">
                         Wybrane projekty zrealizowane przez nas w ostatnim czasie:
                     </h1>
-                    <h2 class="mt-5 d-none d-lg-block myTitles">
-                        Wdrożenie strategii rozwoju w spółce Bluesoft zakończone transakcją sprzedaży
+                    <h2 class="mt-5 d-none d-lg-block myTitles" >
+                        Wdrożenie strategii rozwoju w spółce Bluesoft zakończone<br>transakcją sprzedaży
                         do inwestora strategicznego
                     </h2>
                     <h2 class="mt-5 d-none d-lg-block myTitles">
-                        Realizacja inwestycji w spółkę technologiczną i skuteczne wyjście do inwestora strategicznego na przykładzie spółki Teroplan
+                        Realizacja inwestycji w spółkę technologiczną i skuteczne wyjście<br>do inwestora strategicznego na przykładzie spółki Teroplan
                     </h2> 
                     <h2 class="mt-5 d-none d-lg-block myTitles">
-                        Wdrożenie modeli kontrolingowych w spółkach informatycznych
+                        Wdrożenie modeli kontrolingowych<br>w spółkach informatycznych
                     </h2>
                     <h2 class="mt-5 d-none d-lg-block myTitles">
-                        Wdrożenie wieloletniego modelu finansowego połączone z procesem sukcesji 
+                        Wdrożenie wieloletniego modelu finansowego<br>połączone z procesem sukcesji 
                     </h2>
                     <h2 class="mt-5 d-none d-lg-block myTitles">
-                        Wdrożenie systemu motywacyjnego dla Zarządu w spółce usługowej o obrocie 1 miliard zł
+                        Wdrożenie systemu motywacyjnego dla Zarządu<br>w spółceusługowej o obrocie 1 miliard zł
                     </h2>   
                 </div>
             </div>
@@ -160,7 +164,7 @@
                                 Braliśmy udział w opracowaniu długoterminowego systemu motywacyjnego dla Zarządu spółki usługowej opartego o wzrost wartości dla akcjonariuszy. Współpracujemy z właścicielami spółki oraz zarządem nad wdrożeniem systemu oraz rozliczaniem zamkniętych okresów.                            </span>
                        </div>
                    </div>
-                   <div class="row mt-5 d-flex align-items-center mb-5 mb-lg-0" data-aos="zoom-out">
+                   <div class="row mt-5 d-flex align-items-center mb-5 mb-lg-0" data-aos="fade-up">
                     <div class="col-12 col-lg-8 d-none d-lg-flex">
                          <div class="progressBox d-flex" >
                             <div class="progressLine" onclick="currentSlide(1)"></div>
@@ -210,12 +214,12 @@
             <div class="col-12 p-0">
                 <div class="stopka">
                     <div class="container d-lg-flex align-items-center justify-content-between p-0 d-none">
-                        <span data-aos="fade-right">
+                        <span>
                             <span class="footerCompany">Team Value Partners spółka z orgraniczoną odpowiedzialnością</span><br>
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex" id="stopkaMail" data-aos="fade-left">
+                        <div class="h-100 d-flex" id="stopkaMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="" >
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5" >
                                 <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
