--- a/offer.html
+++ b/offer.html
@@ -14,14 +14,14 @@
     <div class="container-fluid">
         <div class="row px-5 d-flex m-0" id="top">
             <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-between justify-content-lg-start">
-                <a href="index.html" class="sygnet" data-aos="fade-right" data-aos-delay="150">
+                <a href="index.html" class="sygnet">
                     <img src="img/sygnet.svg" class="img-fluid"/>
                 </a>
                 <div class="menuIcon d-lg-none" onclick="openNav()">
                     <img src="img/menu.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0 " data-aos="fade-down">
+            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
                 <nav id="menu" class="d-flex justify-content-end">      
                     <ul class="d-flex align-items-center">
                         <li><a href="about.html">O Nas</a></li>
@@ -82,11 +82,11 @@
                     <div class="container d-flex flex-column justify-content-between h-100 p-0">
                         <div class="row mt-lg-5 pt-lg-5 m-0">
                             <div class="col-12 d-flex flex-column p-0">
-                                <h1 class="pageName mx-5 mx-lg-0" data-aos="fade-right" data-aos-delay="350">
+                                <h1 class="pageName mx-5 mx-lg-0" data-aos="fade-up">
                                     Oferta
                                 </h1>
-                                <img src="img/oferta.jpg" class="img-fluid d-lg-none" alt="" data-aos="fade-right">
-                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0" data-aos="fade-right" data-aos-delay="350">
+                                <img src="img/oferta.jpg" class="img-fluid d-lg-none" alt="" data-aos="fade-up">
+                                <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0" data-aos="fade-up" data-aos-delay="100">
                                     Oferujemy wsparcie w zakresie budowania i wdrażania strategii rozwoju, zaórwno w drodze wzrostu<br>
                                     orgranicznego, jak i poprzez akwizycje. Pomagamy właścicielom i zarządom przedsiębiorstw w implemntacji<br>
                                     efektywnych procesów zarządzania ukierunkowanych wzrost wartości.   
@@ -94,16 +94,16 @@
                             </div>
                         </div>
                         <div class="row m-0 px-5 px-lg-0">
-                            <div class="col-12 col-lg-7 p-0" data-aos="fade-right" >
+                            <div class="col-12 col-lg-7 p-0" data-aos="fade-up" data-aos-delay="200">
                                 <div class="offerPageBackgroundBox d-flex flex-column justify-content-center p-lg-5">
-                                    <div class="row mb-3 ml-lg-4 m-0 mt-5 mt-lg-0" data-aos="fade-up" data-aos-delay="350">
-                                        <span>
+                                    <div class="row mb-3 ml-lg-4 m-0 mt-5 mt-lg-0" >
+                                        <span data-aos="fade-up" data-aos-delay="200">
                                             Strategie wieloletnie i optymalizacja procesów,<br>
                                             w tym systemy motywacje dla kadry zarządzajęcej. 
                                         </span>
                                        
                                     </div>
-                                    <div class="row mt-4 ml-lg-4 m-0 mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="350">
+                                    <div class="row mt-4 ml-lg-4 m-0 mb-5 mb-lg-0">
                                         <a name="" id="" class="d-none d-lg-flex hvr-icon-wobble-horizontal buttonRounded blackHoverShadow bg-white justify-content-lg-center justify-content-between" href="#strategy" role="button">
                                             <div class="arrowRight mr-lg-4">
                                                 <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
@@ -119,16 +119,16 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-lg-5 pl-lg-2 p-0" data-aos="fade-right">
+                            <div class="col-12 col-lg-5 pl-lg-2 p-0" data-aos="fade-up" data-aos-delay="250">
                                 <div class="offerPageBackgroundBox d-flex flex-column justify-content-center p-lg-5">
-                                    <div class="row mb-3 ml-lg-4 m-0 mt-5 mt-lg-0" data-aos="fade-up" data-aos-delay="350">
+                                    <div class="row mb-3 ml-lg-4 m-0 mt-5 mt-lg-0" data-aos="fade-up" data-aos-delay="250">
                                         <span>
                                             Procesy M&A, sprzedaż spółek<br>
                                             oraz inwestycje kapitałowe 
                                         </span>
                                        
                                     </div>
-                                    <div class="row mt-4 ml-lg-4 m-0 mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="350">
+                                    <div class="row mt-4 ml-lg-4 m-0 mb-5 mb-lg-0">
                                         <a name="" id="" class="d-none d-lg-flex buttonRounded hvr-icon-wobble-horizontal blackHoverShadow bg-white justify-content-lg-center justify-content-between" href="#manda" role="button">
                                             <div class="arrowRight mr-lg-4">
                                                 <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
@@ -151,7 +151,7 @@
             </div>
         </div>
         <div class="container my-0 py-0 px-5 px-lg-0">
-            <div class="row my-5 mx-0" id="strategy" data-aos="fade-right" >
+            <div class="row my-5 mx-0" id="strategy" data-aos="fade-up" >
                 <div class="col-12 p-0">
                     <h1 class="categoryOffer">
                         Strategie wieloletnie i optymalizacja procesów,<br>
@@ -161,11 +161,11 @@
             </div>
             <div class="row mx-0" data-aos="zoom-out">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox pb-5 pb-lg-0">
-                    <div class="col-lg-3" data-aos="fade-right">
+                    <div class="col-lg-3">
                         <img src="img/strategie.jpg" class="img-fluid" alt="">
                     </div>
-                    <div data-aos="fade-right" data-aos-delay="200">
-                        <span class="categoryTxt" data-aos="fade-right">
+                    <div data-aos="fade-up" data-aos-delay="200">
+                        <span class="categoryTxt">
                             Definiowanie wieloletnich strategii rozwoju ukierunkowanych na budowę wartości, w tym<br>
                             identyfikacji kluczowych generatorów wartości spółek (strategicznych elementów kapitału<br>
                             intelektualnego)
@@ -175,10 +175,10 @@
             </div>
             <div class="row mt-5 mb-5 mx-0" data-aos="zoom-out">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
-                    <div class="col-lg-3" data-aos="fade-right">
+                    <div class="col-lg-3">
                         <img src="img/projektowanie.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5" data-aos="fade-right" data-aos-delay="200">
+                    <div class="py-5" data-aos="fade-up" data-aos-delay="200">
                         <span class="categoryTxt">
                             Projektowanie i optymalizacja procesów wewnętrznych nastawiona<br>
                             na maksymalizacje efektywności i produktywności zasobów
@@ -194,10 +194,10 @@
             </div>
             <div class="row mt-5 mb-5 mx-0" data-aos="zoom-out">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
-                    <div class="col-lg-3" data-aos="fade-right">
+                    <div class="col-lg-3">
                         <img src="img/sukcesja.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5" data-aos="fade-right" data-aos-delay="200">
+                    <div class="py-5" data-aos="fade-up" data-aos-delay="200">
                         <span class="categoryTxt">
                             Wsparcie w procesie budowania sukcesji, w szczególności w spółkach rodzinnych
                         </span>
@@ -211,7 +211,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row my-5 mx-0" id="manda" data-aos="fade-right">
+            <div class="row my-5 mx-0" id="manda" data-aos="fade-up">
                 <div class="col-12 p-0">
                     <h1 class="categoryOffer">
                         Procesy M&A, sprzedaż spółek oraz inwestycje kapitałowe
@@ -220,10 +220,10 @@
             </div>
             <div class="row mx-0" data-aos="zoom-out">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox pb-5 pb-lg-0">
-                    <div class="col-lg-3" data-aos="fade-right">
+                    <div class="col-lg-3">
                         <img src="img/rozbudowa.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5"  data-aos="fade-right" data-aos-delay="200">
+                    <div class="py-5"  data-aos="fade-up" data-aos-delay="200">
                         <span class="categoryTxt">
                             Wsparcie w realizacji strategii wzrostu przez akwizycje jako uzupełnienie strategii 
                             wzrostu organicznego                        
@@ -240,10 +240,10 @@
             </div>
             <div class="row mt-5 mb-5 mx-0" data-aos="zoom-out">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
-                    <div class="col-lg-3" data-aos="fade-right">
+                    <div class="col-lg-3">
                         <img src="img/zysk.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5" data-aos="fade-right" data-aos-delay="200">
+                    <div class="py-5" data-aos="fade-up" data-aos-delay="200">
                         <span class="categoryTxt">
                             Wsparcie w procesie sprzedaży spółek (do inwestorów strategicznych lub finansowych)
                         </span>
@@ -256,10 +256,10 @@
             </div>
             <div class="row mt-5 mb-5 mx-0" data-aos="zoom-out">
                 <div class="col-12 d-flex align-items-center flex-column flex-lg-row offerBorderedBox">
-                    <div class="col-lg-3" data-aos="fade-right">
+                    <div class="col-lg-3">
                         <img src="img/finansowanie.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="py-5" data-aos="fade-right" data-aos-delay="200">
+                    <div class="py-5" data-aos="fade-up" data-aos-delay="200">
                         <span class="categoryTxt">
                             Pozyskiwania finansowania na rozwój od inwestorów strategicznych i finansowych                        
                         </span>
@@ -276,12 +276,12 @@
             <div class="col-12 p-0">
                 <div class="stopka">
                     <div class="container d-lg-flex align-items-center justify-content-between p-0 d-none">
-                        <span data-aos="fade-right">
+                        <span>
                             <span class="footerCompany">Team Value Partners spółka z orgraniczoną odpowiedzialnością</span><br>
                             Zygmunta Krasińskiego 29/9, 40-019 Katowice, Polska<br>
                             KRS 00006788678 NIP 5252711594 REGON 367315883
                         </span>
-                        <div class="h-100 d-flex" id="stopkaMail" data-aos="fade-left">
+                        <div class="h-100 d-flex" id="stopkaMail">
                             <img src="img/stopka1.png" class="img-fluid" alt="" >
                             <div class="primaryBg d-flex justify-content-center align-items-center pt-5" >
                                 <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
